--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
-  <h3>Move along. (404 error)</h3>
+  <h4>Move along</h4>
   <br/>
 
 </div>
