--- a/404.html
+++ b/404.html
@@ -8,5 +8,6 @@ permalink: /404.html
   <h1>Whoops, this page doesn't exist.</h1>
   <h4>Move along</h4>
   <br/>
-
+  
+  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
 </div>
