--- a/404.html
+++ b/404.html
@@ -8,6 +8,5 @@ permalink: /404.html
   <h1>Whoops, this page doesn't exist.</h1>
   <h4>Move along</h4>
   <br/>
-  
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <a href="/" class="btn btn-primary">Go back to the homepage</a>
 </div>
