--- a/newslettercreation.html
+++ b/newslettercreation.html
@@ -1,13 +1,11 @@
-
 ---
 layout: none
 ---
 
-<!-- site logo -->
 <a href="https://daksh.page"><img src="https://daksh.page/assets/header_slim.png"></a>
 
-{% for post in site.posts limit:6 %}
+{% for post in site.posts limit:7 %}
 <h2>{{post.title}}</h2>
-<p>{{post.description}} <a href="{{post.bitlink}}">Read more &raquo;</a></p>
+<p>{{post.description}} <a href="{{post.rebrandly}}">Read more &raquo;</a></p>
 
 {% endfor %}
