--- a/newslettercreation.html
+++ b/newslettercreation.html
@@ -6,6 +6,6 @@ layout: none
 
 {% for post in site.posts limit:7 %}
 <h2>{{post.title}}</h2>
-<p>{{post.description}} <a href="{{post.rebrandly}}">Read more &raquo;</a></p>
+<p>{{post.description}} <a href="{{post.bitlink}}">Read more &raquo;</a></p>
 
 {% endfor %}
