--- a/newslettercreation.html
+++ b/newslettercreation.html
@@ -2,7 +2,7 @@
 layout: none
 ---
 
-<a href="https://daksh.page"><img src="https://daksh.page/assets/header_slim.png"></a>
+<a href="https://daksh.page"><img src="https://daksh.page/assets/header_small.png"></a>
 
 {% for post in site.posts limit:7 %}
 <h2>{{post.title}}</h2>
