change description font to helvetica

--- a/newslettercreation.html
+++ b/newslettercreation.html
@@ -23,7 +23,7 @@ layout: none
 
 {% for post in site.posts limit:7 %}
 <h2 style="font-family:Verdana; color: #586e75">{{post.title}}</h2>
-<p style="font-family:'Courier New'; color: #93a1a1">{{post.description}} <a href="{{post.bitlink}}">Read more &raquo;</a></p>
+<p style="font-family:'Helvetica'; color: #93a1a1">{{post.description}} <a href="{{post.bitlink}}">Read more &raquo;</a></p>
 
 {% endfor %}
 </body>
