--- a/newslettercreation.html
+++ b/newslettercreation.html
@@ -19,7 +19,7 @@ layout: none
     }
     </style>
 
-<a href="https://daksh.page"><img src="https://daksh.page/assets/header_small.png"></a>
+<p style="text-align:center;"><a href="https://daksh.page"><img src="https://daksh.page/assets/header_small.png"></a></p>
 
 {% for post in site.posts limit:7 %}
 <h2 style="font-family:Verdana; color: #586e75">{{post.title}}</h2>
